<resources>
    <string name="app_name">Java Quiz</string>
    <string name="about_app">About App.</string>
    <string name="btn_send_student_name">let\'s start</string>
    <string name="author_name">create By Abdulahman</string>
    <string name="welcome_message">Hello, This is a just simple java qiuz</string>
    <string name="hint_message_for_student_name">Please enter your name</string>
    <string name="write_correct_answer">Write Correct Answer</string>
    <string name="checkAllCorrectAnswre">Choose all correct answer </string>
    <string name="show_result">Result</string>
    <string name="question_8">Write shortcut of Java Virtual Machine ?</string>
    <string name="checkBox_question">Which of the below are reserved keyword in java ?</string>
    <string name="first_answer">null</string>
    <string name="second_answer">array</string>
    <string name="third_answer">int</string>
    <string name="fourth_answer">goto</string>
    <string name="next_slide">Next</string>
    <string name="title_second_page">Second page</string>
    <string name="complete_question">Complete Questions</string>
    <string name="choice_question">Please choice correct answer</string>
    <string name="thanks_message">Result Quiz </string>
    <string name="student_name">Student Name:</string>
    <string name="correct_answer">Correct Answer :</string>
    <string name="exit">Exit</string>
    <string name="retry">Retry</string>
    <string name="incorrect_answer">Incorrect Answer:</string>
    <string name="contact_mes">Thank you,For using our app This is a simple java quiz, version 1.0 If you meet any issues OR have a notes please contact us</string>
    <string name="write_notes_here">Write your notes here</string>
    <string name="sendEmail">Send mail</string>
</resources>
