<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="5dp"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:layout_marginTop="5dp"
    android:background="@color/textColorPrimary"
    card_view:cardCornerRaduis="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#fff"
        android:orientation="horizontal"
        android:padding="16dp">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center_vertical"
            android:layout_margin="7dp"
            android:src="@drawable/ic_nine" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="@string/checkBox_question"
                android:textSize="24sp" />


            <CheckBox
                android:id="@+id/chBox_first"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="left"
                android:layout_marginLeft="24dp"
                android:layout_weight="1"
                android:onClick="onCheckBoxClicked"
                android:paddingLeft="2dp"
                android:text="@string/first_answer" />

            <CheckBox
                android:id="@+id/chBox_second"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="left"
                android:layout_marginLeft="24dp"
                android:layout_weight="1"
                android:onClick="onCheckBoxClicked"
                android:paddingLeft="2dp"
                android:text="@string/second_answer" />

            <CheckBox
                android:id="@+id/chBox_third"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="left"
                android:layout_marginLeft="24dp"
                android:layout_weight="1"
                android:onClick="onCheckBoxClicked"
                android:paddingLeft="2dp"
                android:text="@string/third_answer" />

            <CheckBox
                android:id="@+id/chBox_fourth"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="left"
                android:layout_marginLeft="24dp"
                android:layout_weight="1"
                android:onClick="onCheckBoxClicked"
                android:paddingLeft="2dp"
                android:text="@string/fourth_answer" />
        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>