<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:padding="16dp"
    android:layout_height="wrap_content">

    <ImageView
        android:layout_marginTop="24dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/ic_check_mark"
        android:layout_marginBottom="24dp"
        android:layout_width="60dp"
        android:layout_height="60dp" />

    <TextView
        android:textStyle="italic"
        android:textSize="24sp"
        android:text="@string/thanks_message"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_marginTop="24dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
       <TextView
           android:text="@string/student_name"
           android:layout_width="0dp"
           android:layout_weight="0.5"
           android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/txv_student_name"
            android:hint="student name"
            android:gravity="center"
            android:textSize="15sp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="24dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/correct_answer"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/txv_correct_answer"
            android:hint="Correct answer "
            android:textSize="15sp"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <Button
        android:text="@string/exit"
        android:background="@drawable/button_styles"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="24dp"
        android:layout_marginRight="24dp"
        android:onClick="exitQuiz"
        android:layout_marginLeft="24dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</LinearLayout>