<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    tools:context="abdulrahmanjavanrd.com.quizapp_project3.activities.SplashScreen">

    <LinearLayout
        android:id="@+id/up_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="24dp"
        android:layout_marginTop="24dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_splash_screen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:scaleType="centerCrop"
            android:src="@drawable/udacity_logo2" />

        <TextView
            android:id="@+id/txv_hello_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/welcome_message"
            android:textColor="@color/textColorPrimary"
            android:textSize="25sp" />
    </LinearLayout>

    <EditText
        android:id="@+id/et_student_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/up_linear"
        android:layout_centerVertical="true"
        android:layout_marginTop="24dp"
        android:background="@drawable/button_styles"
        android:gravity="center"
        android:hint="@string/hint_message_for_student_name"
        android:inputType="text"
        android:textColor="@color/textColorPrimary" />

    <LinearLayout
        android:id="@+id/down_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:padding="16dp">

        <Button
            android:id="@+id/btn_send_student_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/txv_author_name"
            android:layout_gravity="right"
            android:layout_marginBottom="24dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/button_styles"
            android:onClick="callMainActivity"
            android:padding="16dp"
            android:text="@string/btn_send_student_name" />

        <TextView
            android:id="@+id/txv_author_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:gravity="bottom"
            android:text="@string/author_name"
            android:textColor="@color/textColorPrimary"
            android:textSize="16dp" />
    </LinearLayout>
</RelativeLayout>
