<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="abdulrahmanjavanrd.com.quizapp_project3.activities.SecondActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/second_toolBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            android:elevation="4dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="24dp"
            android:paddingTop="24dp"
            android:text="@string/write_correct_answer"
            android:textAppearance="@style/TextAppearance.AppCompat.Title" />
        <!--include input question -->
        <include layout="@layout/input_question" />
        <!-- textView for true and false question -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="24dp"
            android:paddingTop="24dp"
            android:text="@string/checkAllCorrectAnswre"
            android:textAppearance="@style/TextAppearance.AppCompat.Title" />
        <!-- include true and false question -->
        <include layout="@layout/ture_and_false_question" />
        <!-- button to show all score .-->
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/button_styles"
            android:onClick="showQuizResult"
            android:text="@string/show_result" />
    </LinearLayout>
</ScrollView>
